roles/test-deployment-app/files/first-app/ingress/deploy-ingress-conf-map.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-name
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: app-nginx
  template:
    metadata:
      labels:
        app: app-nginx
        version: v0.0.2
    spec:
      containers:
        - name: cont-app-nginx
          image: nginx:latest
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
          command: ["/bin/bash", "-c"]
          args: ["$(SCRIPT)"]
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchLabels:
                  app: cont-app-nginx
      # for config current time zone and time
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 0

---
kind: Service
apiVersion: v1
metadata:
  name: app-nginx-service
spec:
  selector:
    app: app-nginx
  #type:  LoadBalancer | ClusterIP | NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-nginx-ingress
  labels:
    name: myingress
spec:
  ingressClassName: nginx
  #ingressClassName: nginx
  rules:
    - host: test.lc
      #- host: app4.deyv.ml
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: app-nginx-service
                port:
                  number: 80
