roles/test-deployment-app/files/first-app/ingress/ingress-demo.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: app1.bad.pp.ua
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app-nginx-service
            port: 
              number: 80
