roles/test-deployment-app/files/first-app/ingress/prometheus-ingress2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prometheus
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  tls:
  - hosts:
    - "test.lc"
    # secretName: tls-secret
  rules:
  - host: test.lc
    http:
      paths:
      - path: "/prom(/|$)(.*)"
        backend:
          serviceName: prometheus-operated
          servicePort: 9090
